--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
+<head>
+	<meta charset="utf-8">
+	<title>Rahul Gupta Tankasala</title>
+	<link href="main.css" rel="stylesheet">
+</head>
 <body>
-<h1>Hlooo World</h1>
-<p>My first github page</p>
+    
+<div class="wrapper">
+    <h3>Hi there! I am</h3>
+    <h1>Rahul Gupta</h1><span>i love&nbsp;</span><span class="text"></span><span class="cursor">|</span>
+    <div class="social"><a href="https://www.linkedin.com/in/rahul-gupta-tankasala-54b462130" target="_blank"><i class="fa fa-linkedin"></i></a><a href="https://twitter.com/Rahul_tragu" target="_blank"><i class="fa fa-twitter"></i></a><a href="https://github.com/tragu" target="_blank"><i class="fa fa-github"></i></a>
+        <a href="https://medium.com/@tankasalarahulgupta" target="_blank"><i class="fa fa-medium"></i></a><a href="https://tanaksalarahulgupta.wordpress.com/" target="_blank"><i class="fa fa-wordpress"></i></a></div>
+</div>
+<script src="main.js"></script>
 </body>
 </html>
