--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang='en'>
 <head>
 	<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
+<link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
+<link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
 	<title>Rahul Gupta Tankasala</title>
 	<link href="main.css" rel="stylesheet">
 </head>
@@ -14,5 +19,6 @@
         <a href="https://medium.com/@tankasalarahulgupta" target="_blank"><i class="fa fa-medium"></i></a><a href="https://tanaksalarahulgupta.wordpress.com/" target="_blank"><i class="fa fa-wordpress"></i></a></div>
 </div>
 <script src="main.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </body>
 </html>
