--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
 <div class="wrapper">
     <h3>Hi there! I am</h3>
-    <h1>Rahul Gupta</h1><span>i like&nbsp;</span><span class="text"></span><span class="cursor">|</span>
+    <h1>Sai Kumar Vallamkonda</h1><span>i like&nbsp;</span><span class="text"></span><span class="cursor">|</span>
     <div class="social"><a href="https://www.linkedin.com/in/rahul-gupta-tankasala-54b462130" target="_blank"><i class="fa fa-linkedin"></i></a><a href="https://twitter.com/Rahul_tragu" target="_blank"><i class="fa fa-twitter"></i></a><a href="https://github.com/tragu" target="_blank"><i class="fa fa-github"></i></a>
         <a href="https://medium.com/@tankasalarahulgupta" target="_blank"><i class="fa fa-medium"></i></a><a href="https://tanaksalarahulgupta.wordpress.com/" target="_blank"><i class="fa fa-wordpress"></i></a></div>
 </div>
